pomo-fix-height: was able to fix extra scroll wheel for x-overflow-hidden / was able to have rain be under the timer visual / have scroll y when in mobile

--- a/src/styles/rain.css
+++ b/src/styles/rain.css
@@ -9,14 +9,19 @@ body {
   background-color: #ffffff;
   display: flex;
   height: 100vh;
+  width: 100vw;
   margin: 0;
-  overflow: hidden; /* Prevent vertical scrollbar */
+  /* Prevent vertical scrollbar */
+  /* overflow: hidden; */
+  overflow-x: hidden;
 }
 
 .rain-container {
   display: flex;
   height: 100vh;
-  overflow: hidden;
+  width: 100vw;
+  /* overflow: hidden; */
+  overflow-x: hidden;
   position: relative;
 }
 
